[package]
name = "played-rs"
version = "0.1.0"
authors = ["Colin Adler <colin@coder.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.11.0"
tokio = { version = "0.2.4", features = ["full"] }
foundationdb = { git = "https://github.com/bluejekyll/foundationdb-rs" }
futures = "0.3.1"
eetf = "0.4"
num = "0.2"
serde = { version = "1.0.102", features = ["derive"] }
serde_eetf = "0.2.0"
serde_repr = "0.1.5"
bitflags = "1.2.1"
ws = "*"
winapi = "0.3.8"

[[bin]]
name = "played-rs"
path = "src/main.rs"
