[package]
name = "played-rs"
version = "0.1.0"
authors = ["Colin Adler <colin@coder.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
foundationdb = { git = "https://github.com/Clikengo/foundationdb-rs", branch = "master" }
# foundationdb = "0.4.2"
futures = "0.3.1"
chrono = "0.4"
byteorder = "1.3"
# twilight-gateway = "0.1"
twilight-gateway = { git = "https://github.com/twilight-rs/twilight", branch = "trunk", features = ["simd-json"] }
# twilight-model = "0.1"
twilight-model = { git = "https://github.com/twilight-rs/twilight", branch = "trunk" }
anyhow = "1"
ctrlc = "3"
serde-mappable-seq = "0.1"

[[bin]]
name = "played-rs"
path = "src/bin/main.rs"

[[bin]]
name = "read-data"
path = "src/bin/read.rs"
